Fix log doppi e ripristino codice valido